started building form + working on making it appendable

--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <%- include ('../partials/head') %>
   </head>
   <body>
-    <%- include ('../partials/body') %>
+    <%- include ('../partials/body') %> <%- include ('../partials/scripts') %>
   </body>
 </html>
