managed to get append functionality working

--- a/views/partials/body.ejs
+++ b/views/partials/body.ejs
@@ -30,7 +30,7 @@
       placeholder="default value"
       class="default-value-1"
     />
-    <button onclick="addRow()" type="button" class="add-row">
+    <button type="button" class="add-row">
       Add another item
     </button>
 
